# dreadlocks

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.BSD-2-Clause  Makefile  README.md  codecov.yml  index.html  pyproject.toml  s  tox.ini
.github/: CODEOWNERS  dependabot.yml
cd-fix-publish-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
ci-dependabot-auto-merge-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
ci-reduce-number-of-test-jobs-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
codecov-set-threshold-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
docs/: .gitignore  conf.py  index.html
docs-add-relevant-links-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
docs-readme-add-badges-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
docs-readme-add-emojis-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
docs-scope-sources-link-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
facilitate-releases-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
fix-cross-parallelization-deadlock-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
increase-python-support-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  usage.html
latest/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  usage.html
main/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  usage.html
test-pypi-publication-auto-abort-1/: .buildinfo  api.html  genindex.html  index.html  py-modindex.html  search.html  (+1 more)
(+4591 files in other folders)
