[tool.poetry]
name = "dreadlocks"
version = "0.0.1"
description = "A REST API for Recoll"
authors = ["make-github-pseudonymous-again <5165674+make-github-pseudonymous-again@users.noreply.github.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
tox = "^4.11.3"
pre-commit = "^3.4.0"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.8"
black = "^23.9.1"


[tool.poetry.group.type]
optional = true

[tool.poetry.group.type.dependencies]
pyright = "^1.1.342"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.2"
pytest-xdist = "^3.3.1"


[tool.poetry.group.cover]
optional = true

[tool.poetry.group.cover.dependencies]
pytest-cov = "^4.1.0"


[tool.poetry.group.profile]
optional = true

[tool.poetry.group.profile.dependencies]
pytest-profiling = "^1.7.0"
gprof2dot = "^2022.7.29"


[tool.poetry.group.debug]
optional = true

[tool.poetry.group.debug.dependencies]
pdbpp = "^0.10.3"


[tool.poetry.group.coverage]
optional = true

[tool.poetry.group.coverage.dependencies]
coverage = "^7.3.4"


[tool.poetry.group.licenses]
optional = true

[tool.poetry.group.licenses.dependencies]
pip-licenses = "^4.3.3"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.3.0rc1"
sphinx-multiversion = "^0.2.4"
sphinx-automodapi = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
target-version = "py311"
ignore = ["E501"]  # NOTE Black takes care of that.

[tool.pyright]
venv = ".venv"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = "*-test.py"
python_classes = "Test"
python_functions = "test_*"
